# Kans3D-Vulkan

./: .gitignore  .gitmodules  CmakeLists.txt  LICENSE  README.md  dependencies.lua  imgui.ini  premake5.lua
Kans3D/: CMakeLists.txt
Kans3D/src/: Kans3D.h  hzpch.cpp  hzpch.h  kspch.cpp  kspch.h
Kans3D/src/Kans3D/Animation/: Animation.cpp  Animation.h
Kans3D/src/Kans3D/Asset/: Asset.h  AssetManager.h  AssetMetaData.h  AssetRegistry.cpp  AssetRegistry.h  AssetType.h
Kans3D/src/Kans3D/Asset/Importer/: AssetImporter.cpp  AssetImporter.h  AssetImporterbase.h  AssimpMeshImporter.cpp  AssimpMeshImporter.h  EnvironmentImporter.cpp  (+13 more)
Kans3D/src/Kans3D/Core/: Application.cpp  Application.h  Base.h  ByteBuffer.h  Cache.h  EntryPoint.h  Hash.cpp  Hash.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Memory.h  PlatformDetection.h  Ref.h  StorageBuffer.h  TimeStep.h  UUID.cpp  UUID.h  Window.h
Kans3D/src/Kans3D/Debug/: Instrumentor.h
Kans3D/src/Kans3D/Editor/: EditorCamera.cpp  EditorCamera.h  EditorPanel.h  EditorResources.cpp  EditorResources.h
Kans3D/src/Kans3D/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Kans3D/src/Kans3D/FileSystem/: FileSystem.cpp  FileSystem.h
Kans3D/src/Kans3D/ImGui/: Colors.cpp  Colors.h  ImGuiLayer.cpp  ImGuiLayer.h  ImguiBuild.cpp  KansUI.cpp  KansUI.h
Kans3D/src/Kans3D/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Kans3D/src/Kans3D/Math/: BindingBox.h  Math.cpp  Math.h
Kans3D/src/Kans3D/Physics/: ParticleSystem.cpp  ParticleSystem.h
Kans3D/src/Kans3D/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ParticleSystem.cpp  ParticleSystem.h  RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineBase.cpp  RenderPipelineBase.h  RenderResourceBase.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  SceneCamera.cpp  SceneCamera.h  SceneRenderer.cpp  SceneRenderer.h  (+8 more)
Kans3D/src/Kans3D/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Kans3D/src/Kans3D/Script/: ScriptAgent.cpp  ScriptAgent.h  ScriptEngine.cpp  ScriptEngine.h
Kans3D/src/Kans3D/Utilities/: KansUI.cpp  KansUI.h  KansUtils.cpp  KansUtils.h  MaterialUtils.cpp  MaterialUtils.h  MeshUtils.cpp  MeshUtils.h  StringUtils.cpp  StringUtils.h
Kans3D/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLRHI.cpp  OpenGLRHI.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Kans3D/src/Platform/Vulkan/: VulkanBase.cpp  VulkanBase.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanPipline.cpp  VulkanPipline.h  VulkanRHI.cpp  VulkanRHI.h  VulkanRHIResource.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderUtils.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Kans3D/src/Platform/windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
KansEditor/: CMakeLists.txt  KansEditor.ini  Project.ini  copy_Resource.cmake  imgui.ini  imgui_log.txt
KansEditor/ProfileSpecication/: runtime-profile.json  shutdown-profile.json  startup-profile.json
KansEditor/Resources/Cache/Shader/: ShaderRegistry.yaml
KansEditor/Resources/Shaders/: DebugNormalShader.glsl  DebugShader.glsl  OutLineShader.glsl  StandardShader.glsl  StaticMeshShader.glsl  StencilShader.glsl  TextureShader.glsl
KansEditor/Resources/Shaders/GenShin_Shader/: LightMapWorkflow.glsl  ToneCharactorShader.glsl
KansEditor/Resources/Shaders/Include/: Buffers.glslh  Env.h  Light.h  TestInclude.glslh  env.glslh
KansEditor/Resources/Shaders/OpenGL/: GridShader.glsl  MeshEntityShader.glsl  OutLineShader.glsl  PostShader.glsl  StandardShader.glsl  StaticMeshShader.glsl
KansEditor/Resources/Shaders/PBR/: HdrToCubeMap.glsl  pbrShader.glsl  prefilter.glsl
KansEditor/Resources/Shaders/SpotCloud/: SpotCloudShader.glsl
KansEditor/Resources/Shaders/Vulkan/: DebugNormalShader.glsl  GridShader.glsl  OutLineShader.glsl  StencilShader.glsl
KansEditor/Resources/Shaders/debug/: LightingTexture.glsl  Texture.glsl  debugspec.glsl
KansEditor/assets/: scenes.kans  scenesTestDemo.kans
KansEditor/assets/model/BCSZ/: readme.txt
KansEditor/assets/model/Box/: BOX.fbx  box.blend
KansEditor/assets/model/GY/: GY.fbx
KansEditor/assets/model/GY_Light/: GY_Light.fbx
KansEditor/assets/model/TestMode/: 20.fbx
KansEditor/assets/model/YL/: YL.fbx
KansEditor/assets/model/boombox_4k/: boombox_4k.gltf
KansEditor/assets/model/chess_set_4k/: chess_set_4k.gltf
KansEditor/assets/model/concrete_cat_statue/: concrete_cat_statue_4k.gltf
KansEditor/assets/model/dby/: dby.fbx
KansEditor/assets/model/modern_coffee_table/: modern_coffee_table_01_4k.gltf
KansEditor/assets/scenes/: TestDemo.kans
KansEditor/assets/shaders/: DebugNormalShader.glsl  OutLineShader.glsl  StaticMeshShader.glsl  ToneShader.glsl
KansEditor/assets/shaders/GenShin_Shader/: ToneCharactorShader.glsl  matcap.glsl
KansEditor/src/: EditorLayer.cpp  EditorLayer.h  KansEditorApp.cpp
KansEditor/src/Debug/: DebugLayer.cpp  DebugLayer.h
KansEditor/src/Panels/: ContentBrowserItem.cpp  ContentBrowserItem.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  ImporterPanel.cpp  ImporterPanel.h  SceneHierachyPanel.cpp  SceneHierachyPanel.h
KansScriptCore/: CMakeLists.txt
KansScriptCore/Source/: Sandbox.cs  Test_Script.cs
KansScriptCore/Source/Core/: Input.cs  InternalCalls.cs  KansCore.cs
KansScriptCore/Source/Math/: Vector.cs
KansScriptCore/Source/Scene/: Component.cs  Entity.cs
(+172 files in other folders)
